# akamai-usage-reporter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  SETUP.md  akamai.env.example  debug_papi.py  find_valid_combinations.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_api_permissions.py  test_credentials.py  test_credentials_simple.py
.github/workflows/: ci.yml
akamai_usage_reporter/: __main__.py
tests/: __init__.py  test_basic.py  test_simple.py
