[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akamai-usage-reporter"
version = "1.1.0"
description = "A CLI tool that analyzes Akamai account usage and generates Cloudflare migration checklists"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Akamai Usage Reporter"}
]
keywords = ["akamai", "cloudflare", "cdn", "migration", "cli", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "edgegrid-python>=1.3.1",
    "tldextract>=3.1.2",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=25.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
akamai-usage-reporter = "akamai_usage_reporter.__main__:main"

[project.urls]
Homepage = "https://github.com/elif-globaldots/akamai-usage-reporter"
Repository = "https://github.com/elif-globaldots/akamai-usage-reporter"
Documentation = "https://github.com/elif-globaldots/akamai-usage-reporter#readme"
Issues = "https://github.com/elif-globaldots/akamai-usage-reporter/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=akamai_usage_reporter",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
